[project]
name = "vienna-transport"
version = "0.1.0"
requires-python = ">=3.14.2"
description = "Vienna Public Transport Home Assistant Integration"
authors = [
    { name = "Philipp Slowak", email = "philipp.slowak@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "homeassistant>=2026.6.4",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "aioresponses>=0.7.9",
    "freezegun>=1.5.0",
    "mypy>=2.1.0",
    "pytest-homeassistant-custom-component>=0.13.338",
    "ruff>=0.15.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.14"
strict = true
explicit_package_bases = true
mypy_path = ["."]
ignore_missing_imports = true
files = ["custom_components", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
known-first-party = ["custom_components.vienna_transport"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
